--- a/changelog
+++ b/changelog
@@ -2,13 +2,17 @@ xorg-server (2:1.6.0-0ubuntu1) UNRELEASED; urgency=low
 
   [ Bryce Harrington ]
   * New upstream release (LP: #319210)
+  * Add 162_null_crtc_in_rotation.patch: Fixes crash when two displays on
+    separate cards are attached.  X doesn't work with multiple cards yet,
+    but crashing is not an appropriate way to handle such a situation.
+    (LP: #139990)
 
   [ Timo Aaltonen ]
   * 159_xinerama_focus.patch, 
     161_force_paired_kbd_device.patch:
     - Dropped, applied upstream
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 03 Mar 2009 00:06:38 +0200
+ -- Bryce Harrington <bryce@ubuntu.com>  Mon, 02 Mar 2009 23:02:25 -0800
 
 xorg-server (2:1.6.0-1) UNRELEASED; urgency=low
 
