--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 xorg-server (2:1.6.0-0ubuntu1) UNRELEASED; urgency=low
 
   [ Bryce Harrington ]
-  * New upstream release (LP: #319210)
+  * New upstream release
+    - Fixes segfault during X startup for drivers with RANDR < 1.2 
+      (LP: #319210)
+    - Fixes EDID for monitors that incorrectly report aspect ratio instead
+      of resolution (LP: #311485)
   * Add 162_null_crtc_in_rotation.patch: Fixes crash when two displays on
     separate cards are attached.  X doesn't work with multiple cards yet,
     but crashing is not an appropriate way to handle such a situation.
@@ -12,7 +16,7 @@ xorg-server (2:1.6.0-0ubuntu1) UNRELEASED; urgency=low
     161_force_paired_kbd_device.patch:
     - Dropped, applied upstream
 
- -- Bryce Harrington <bryce@ubuntu.com>  Mon, 02 Mar 2009 23:02:25 -0800
+ -- Bryce Harrington <bryce@ubuntu.com>  Tue, 03 Mar 2009 13:38:22 -0800
 
 xorg-server (2:1.6.0-1) UNRELEASED; urgency=low
 
