--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.6.0-0ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.6.0-0ubuntu1) jaunty; urgency=low
 
   [ Bryce Harrington ]
   * New upstream release
@@ -18,7 +18,7 @@ xorg-server (2:1.6.0-0ubuntu1) UNRELEASED; urgency=low
     161_force_paired_kbd_device.patch:
     - Dropped, applied upstream
 
- -- Bryce Harrington <bryce@ubuntu.com>  Tue, 03 Mar 2009 17:44:03 -0800
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 06 Mar 2009 14:44:31 -0800
 
 xorg-server (2:1.6.0-1) UNRELEASED; urgency=low
 
