--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+xorg-server (2:1.6.0-0ubuntu2) UNRELEASED; urgency=low
+
+  * Add thinko_in_xf86targetpreferred.patch: For monitors that do not
+    define a "preferred" mode, if the monitor is not connected to the
+    first output, X wouldn't pick up the mode correctly, resulting in a
+    "No modes" error in Xorg.0.log and dropping user to failsafe-X mode.
+    (LP: #335214)
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Wed, 18 Mar 2009 20:27:09 -0700
+
 xorg-server (2:1.6.0-0ubuntu1) jaunty; urgency=low
 
   [ Bryce Harrington ]
