--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.6.0-0ubuntu2) UNRELEASED; urgency=low
+xorg-server (2:1.6.0-0ubuntu2) jaunty; urgency=low
 
   * Add 163_thinko_in_xf86targetpreferred.patch:
     - For monitors that do not define a "preferred" mode, if the monitor
@@ -13,7 +13,7 @@ xorg-server (2:1.6.0-0ubuntu2) UNRELEASED; urgency=low
       resulting in huge fonts.
       (LP: #320930)
 
- -- Bryce Harrington <bryce@ubuntu.com>  Wed, 18 Mar 2009 20:31:44 -0700
+ -- Bryce Harrington <bryce@ubuntu.com>  Wed, 18 Mar 2009 20:47:12 -0700
 
 xorg-server (2:1.6.0-0ubuntu1) jaunty; urgency=low
 
