--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+xorg-server (2:1.6.0-0ubuntu6) UNRELEASED; urgency=low
+
+  * Add 171_xkb_geometry_copying.patch:
+    - Fixes crash when plugging/unplugging USB devices due to incorrect
+      copying of XKB geometry base_color and label_color.  Patch
+      cherrypicked from upstream.
+      (LP: #333222)
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 27 Mar 2009 19:36:24 -0700
+
 xorg-server (2:1.6.0-0ubuntu5) jaunty; urgency=low
 
   [Tormod Volden]
