--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.6.0-0ubuntu6) UNRELEASED; urgency=low
+xorg-server (2:1.6.0-0ubuntu6) jaunty; urgency=low
 
   * Add 171_xkb_geometry_copying.patch:
     - Fixes crash when plugging/unplugging USB devices due to incorrect
@@ -6,7 +6,7 @@ xorg-server (2:1.6.0-0ubuntu6) UNRELEASED; urgency=low
       cherrypicked from upstream.
       (LP: #333222, #321946)
 
- -- Bryce Harrington <bryce@ubuntu.com>  Fri, 27 Mar 2009 19:41:43 -0700
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 27 Mar 2009 19:58:33 -0700
 
 xorg-server (2:1.6.0-0ubuntu5) jaunty; urgency=low
 
