Add Xephyr man page

--- a/changelog
+++ b/changelog
@@ -1,11 +1,14 @@
 xorg-server (2:1.6.0-0ubuntu9) jaunty; urgency=low
 
-  * debian/local/xvfb-run: Fixes race condition with concurrent invocations
+  * local/xvfb-run: Fixes race condition with concurrent invocations
     (LP: #348052)
-  * debian/local/xvfb-run, xvfb-run.1: Add correct docs about error codes
+  * local/xvfb-run, xvfb-run.1: Add correct docs about error codes
     (LP: #328205)
+  * local/xserver-xephyr.1, rules, xserver-xephyr.install: Add man page
+    for xephyr
+    (LP: #134906)
 
- -- Bryce Harrington <bryce@ubuntu.com>  Wed, 01 Apr 2009 20:35:36 -0700
+ -- Bryce Harrington <bryce@ubuntu.com>  Wed, 01 Apr 2009 20:37:22 -0700
 
 xorg-server (2:1.6.0-0ubuntu8) jaunty; urgency=low
 
