--- a/changelog
+++ b/changelog
@@ -11,6 +11,7 @@ xorg-server (2:1.6.0-1) UNRELEASED; urgency=low
     included upstream.
   * Turn on ModeDebug by default.
   * Use libgcrypt for SHA1 instead of OpenSSL's libcrypto.
+  * Build the xselinux extension on Linux architectures.
 
  -- David Nusinow <dnusinow@debian.org>  Sun, 15 Feb 2009 18:49:51 -0500
 
