--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.6.0-2) UNRELEASED; urgency=low
+
+  * Disable dri2 on hurd-i386.  Thanks, Samuel Thibault!
+
+ -- Julien Cristau <jcristau@debian.org>  Mon, 13 Apr 2009 21:16:49 +0100
+
 xorg-server (2:1.6.0-1) unstable; urgency=low
 
   [ David Nusinow ]
