--- a/changelog
+++ b/changelog
@@ -1,8 +1,12 @@
-xorg-server (2:1.6.0-2) UNRELEASED; urgency=low
+xorg-server (2:1.6.1-1) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Disable dri2 on hurd-i386.  Thanks, Samuel Thibault!
 
- -- Julien Cristau <jcristau@debian.org>  Mon, 13 Apr 2009 21:16:49 +0100
+  [ Brice Goglin ]
+  * New upstream release.
+
+ -- Brice Goglin <bgoglin@debian.org>  Wed, 15 Apr 2009 13:20:46 +0200
 
 xorg-server (2:1.6.0-1) unstable; urgency=low
 
