--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.6.1-2) UNRELEASED; urgency=low
+
+  * Add 20_hurd-i386.diff to fix FTBFS on hurd-i386,
+    thanks Samuel Thibault! (closes: #523970)
+
+ -- Brice Goglin <bgoglin@debian.org>  Wed, 15 Apr 2009 15:32:04 +0200
+
 xorg-server (2:1.6.1-1) unstable; urgency=low
 
   [ Julien Cristau ]
