--- a/changelog
+++ b/changelog
@@ -1,7 +1,7 @@
 xorg-server (2:1.6.1.901-3) UNRELEASED; urgency=low
 
   * xvfb-run: don't pass the magic cookie to xauth on the command line
-    (CVE-2009-1573).  Thanks, Loïc Minier!
+    (CVE-2009-1573; closes: #526678).  Thanks, Loïc Minier!
   * xvfb-run: use mktemp to create the temporary directory.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 14 May 2009 21:05:26 +0200
