In the bug script, grep dmesg for agp in addition to drm.

--- a/changelog
+++ b/changelog
@@ -7,6 +7,7 @@ xorg-server (2:1.6.1.901-3) UNRELEASED; urgency=low
     causes visual corruption in some cases.  Thanks, Michel Dänzer!
   * Only include hal info for keyboards, mice, touchpads and tablets in the
     bug script.
+  * In the bug script, grep dmesg for agp in addition to drm.
 
  -- Julien Cristau <jcristau@debian.org>  Thu, 14 May 2009 21:05:26 +0200
 
