--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 xorg-server (2:1.6.1.901-2ubuntu1) UNRELEASED; urgency=low
 
   * Merge from Debian unstable.
+  * Disable 143_default_to_vesa.patch for now, breaks autoconfiguration
+    when the pci-ids directory exists but has no match. (LP: #379504)
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Tue, 19 May 2009 14:07:44 +0300
 
