--- a/changelog
+++ b/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.6.1.901-3) UNRELEASED; urgency=low
+xorg-server (2:1.6.1.901-3) unstable; urgency=low
 
   [ Julien Cristau ]
   * xvfb-run: don't pass the magic cookie to xauth on the command line
@@ -38,7 +38,7 @@ xorg-server (2:1.6.1.901-3) UNRELEASED; urgency=low
   [ David Nusinow ]
   * Add README.source
 
- -- David Nusinow <dnusinow@debian.org>  Mon, 25 May 2009 21:21:55 -0400
+ -- Julien Cristau <jcristau@debian.org>  Tue, 23 Jun 2009 19:52:10 +0200
 
 xorg-server (2:1.6.1.901-2) unstable; urgency=low
 
