--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.6.1.901-4) UNRELEASED; urgency=low
+
+  * Bump serverminver to 2:1.6.1.901-3 for the dri2 upstream changes in the
+    previous upload.
+
+ -- Julien Cristau <jcristau@debian.org>  Wed, 24 Jun 2009 11:59:58 +0200
+
 xorg-server (2:1.6.1.901-3) unstable; urgency=low
 
   [ Julien Cristau ]
