--- a/changelog
+++ b/changelog
@@ -1,11 +1,15 @@
 xorg-server (2:1.6.2.901-1ubuntu1) UNRELEASED; urgency=low
 
+  [ Bryce Harrington ]
   * Add 104_nvidia_autodetect.patch - Automatically detect and use -nvidia
     or -nouveau instead of -nv if installed.  Thanks Sarvatt!
   * Add 105_fglrx_autodetect.patch - Automatically detect and use -fglrx
     on R600 and newer hardware or -radeonhd if either is installed.
 
- -- Bryce Harrington <bryce@ubuntu.com>  Thu, 02 Jul 2009 15:59:58 -0700
+  [ Timo Aaltonen ]
+  * Merge from Debian unstable.
+
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Mon, 27 Jul 2009 16:39:01 +0300
 
 xorg-server (2:1.6.2.901-1) unstable; urgency=low
 
