--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.6.2.901-1ubuntu2) karmic; urgency=low
+
+  * Add 178_glx_flush_cache.patch and 179_glx_cleanup_drawables.patch:
+    - Cleanup destroyed windows and drawables, to prevent crash during
+      compiz startup.
+      (LP: #408293)
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Mon, 03 Aug 2009 07:55:12 -0700
+
 xorg-server (2:1.6.2.901-1ubuntu1) karmic; urgency=low
 
   [ Timo Aaltonen ]
