--- a/changelog
+++ b/changelog
@@ -1,8 +1,10 @@
 xorg-server (2:1.6.3-1ubuntu1) UNRELEASED; urgency=low
 
   * Merge from Debian unstable.
+  * control: Drop libaudit-dev from build-deps, since SELinux-support
+    is still disabled anyway.
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Wed, 05 Aug 2009 13:54:26 +0300
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Wed, 05 Aug 2009 13:56:10 +0300
 
 xorg-server (2:1.6.3-1) unstable; urgency=low
 
