--- a/changelog
+++ b/changelog
@@ -1,11 +1,11 @@
-xorg-server (2:1.6.3-1ubuntu1) UNRELEASED; urgency=low
+xorg-server (2:1.6.3-1ubuntu1) karmic; urgency=low
 
   * Merge from Debian unstable.
   * control: Drop libaudit-dev from build-deps, since SELinux-support
     is still disabled anyway.
   * Drop 182_fedora_quirk_pea.patch, included in 1.6.3.
 
- -- Timo Aaltonen <tjaalton@ubuntu.com>  Wed, 05 Aug 2009 14:03:46 +0300
+ -- Timo Aaltonen <tjaalton@ubuntu.com>  Wed, 05 Aug 2009 14:11:01 +0300
 
 xorg-server (2:1.6.3-1) unstable; urgency=low
 
