--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.6.3-1ubuntu2) karmic; urgency=low
+
+  * Add 182_negative_sync_transitions.patch:  Upstream cherrypick.
+    Fix random blanking display when system is not idle, caused by
+    mishandling of negative transition triggers in XSync.
+    (LP: #397839)
+  
+ -- Bryce Harrington <bryce@ubuntu.com>  Fri, 14 Aug 2009 11:21:09 -0700
+
 xorg-server (2:1.6.3-1ubuntu1) karmic; urgency=low
 
   * Merge from Debian unstable.
